# cesium-starter

./: .gitignore  docker-compose.yml  index.html  log  pyproject.toml  sample.XML  soil_layers.geojson
api/: .rubocop.yml  Dockerfile  Gemfile
api/app/controllers/: borings_controller.rb  geojsons_controller.rb  registers_controller.rb
api/app/models/: boring.rb  layer.rb
api/app/services/: combine_geojson_generator.rb  create_layers.rb  geojson_generater.rb  geojson_generator.rb  layers_creater.rb
api/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
api/config/environments/: development.rb  production.rb
api/config/initializers/: cors.rb
api/db/: schema.rb
api/db/migrate/: 20241122094000_init_db.rb
api/lib/utils/: latlon.rb
front/: index.html  package-lock.json  package.json  xxxBEDSK50330283001.XML.geojson  xxxBEDSK50330283008.XML.geojson  xxxBEDSK50330283013.XML.geojson  xxxBEDSK50330283049.XML.geojson  xxxBEDSK50330283050.XML.geojson
front/src/: NumericalPngTerrainProvider.js  main.ts
page_jsons/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+7055 more)
src/: display_json.py  main.py  post_boring.py  post_geojson.py  sample.json  scrape.py  scrape_pages.py
